--- a/EnglishMaster/wwwroot/css/site.css
+++ b/EnglishMaster/wwwroot/css/site.css
@@ -62,3 +62,47 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th,
+td {
+    padding: 1rem 2rem;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    font-weight: normal;
+    font-size: .875rem;
+    color: #666;
+    background: #eee;
+    position: sticky;
+    top: 0;
+}
+
+@media(max-width: 500px) {
+    .heading {
+        display: none;
+    }
+
+    td {
+        display: block;
+    }
+
+        td::before {
+            content: attr(data-label);
+            font-size: .875rem;
+            color: #666;
+            display: block;
+            margin-bottom: 0.25rem;
+        }
+
+    .word-name {
+        background: #eee;
+    }
+}
