--- a/EnglishMaster/Shared/MainLayout.razor
+++ b/EnglishMaster/Shared/MainLayout.razor
@@ -3,6 +3,9 @@
 <PageTitle>EnglishMaster</PageTitle>
 
 <div class="page">
+    <div class="sidebar">
+        <NavMenu />
+    </div>
     <main>
         <article class="content px-4">
             @Body
